SR22AS-107 fix media height on Mobile Carousel

--- a/src/components/CardContainer/card-container.scss
+++ b/src/components/CardContainer/card-container.scss
@@ -11,6 +11,8 @@ $themes: (
 .card-container {
   display: flex;
   flex-direction: column;
+  margin-bottom: $spacing-l;
+  width: 100%;
 
   &__title {
     font-size: 4.8rem;
